--- a/package.json
+++ b/package.json
@@ -235,15 +235,18 @@
     "@mui/material": "^5.6.4",
     "@mui/styled-engine-sc": "^5.6.1",
     "@react-icons/all-files": "^4.1.0",
+    "@types/three": "^0.140.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.6",
     "electron-updater": "^4.6.5",
     "history": "^5.3.0",
     "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "three": "^0.140.0"
   },
   "devEngines": {
     "node": ">=14.x",
