--- a/package.json
+++ b/package.json
@@ -246,7 +246,8 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
-    "three": "^0.140.0"
+    "three": "^0.140.0",
+    "three-mesh-bvh": "^0.5.10"
   },
   "devEngines": {
     "node": ">=14.x",
