--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.6.4",
     "@mui/styled-engine-sc": "^5.6.1",
     "@react-icons/all-files": "^4.1.0",
