--- a/package.json
+++ b/package.json
@@ -243,6 +243,7 @@
     "history": "^5.3.0",
     "mobx": "^6.5.0",
     "mobx-react": "^7.4.0",
+    "notistack": "^2.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
