--- a/package.json
+++ b/package.json
@@ -247,10 +247,12 @@
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.5",
     "three": "^0.140.0",
     "three-mesh-bvh": "^0.5.10",
-    "ts-keycode-enum": "^1.0.6"
+    "ts-keycode-enum": "^1.0.6",
+    "tsyringe": "^4.7.0"
   },
   "devEngines": {
     "node": ">=14.x",
