--- a/package.json
+++ b/package.json
@@ -239,10 +239,12 @@
     "@mui/material": "^5.6.4",
     "@mui/styled-engine-sc": "^5.6.1",
     "@react-icons/all-files": "^4.1.0",
+    "@types/lodash": "^4.14.191",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.6",
     "electron-updater": "^4.6.5",
     "history": "^5.3.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.5.0",
     "mobx-react": "^7.4.0",
     "notistack": "^2.0.5",
