--- a/package.json
+++ b/package.json
@@ -130,7 +130,6 @@
     "hot",
     "reload"
   ],
-  "homepage": "https://github.com/electron-react-boilerplate/electron-react-boilerplate#readme",
   "jest": {
     "testURL": "http://localhost/",
     "testEnvironment": "jsdom",
@@ -240,6 +239,9 @@
     "@mui/styled-engine-sc": "^5.6.1",
     "@react-icons/all-files": "^4.1.0",
     "@types/lodash": "^4.14.191",
+    "@types/worker-plugin": "^5.0.1",
+    "comlink": "^4.3.1",
+    "easy-web-worker": "^1.0.6",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.6",
     "electron-updater": "^4.6.5",
@@ -256,13 +258,11 @@
     "three": "^0.140.2",
     "three-mesh-bvh": "^0.5.17",
     "ts-keycode-enum": "^1.0.6",
-    "tsyringe": "^4.7.0"
+    "tsyringe": "^4.7.0",
+    "worker-plugin": "^5.0.1"
   },
   "devEngines": {
     "node": ">=14.x"
-  },
-  "collective": {
-    "url": "https://opencollective.com/electron-react-boilerplate-594"
   },
   "browserslist": [],
   "prettier": {
