--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "emitDecoratorMetadata": true,
     "target": "es2021",
     "module": "commonjs",
-    "lib": ["dom", "es2021"],
+    "lib": [
+      "dom",
+      "es2021",
+      "WebWorker"
+    ],
     "declaration": true,
     "declarationMap": true,
     "jsx": "react-jsx",
