--- a/package.json
+++ b/package.json
@@ -240,6 +240,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@types/lodash": "^4.14.191",
     "@types/worker-plugin": "^5.0.1",
+    "@uttori/image-png": "^1.3.0",
     "comlink": "^4.3.1",
     "easy-web-worker": "^1.0.6",
     "electron-debug": "^3.2.0",
