--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,13 @@
     "allowJs": true,
     "outDir": "release/app/dist"
   },
-  "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
+  "exclude": [
+    "test",
+    "release/build",
+    "release/app/dist",
+   ".erb/dll"
+  ],
+  "include": [
+    "src/workers"
+  ]
 }
