--- a/package.json
+++ b/package.json
@@ -191,7 +191,7 @@
     "electron-notarize": "^1.2.1",
     "electron-rebuild": "^3.2.9",
     "electronmon": "^2.0.2",
-    "eslint": "^8.12.0",
+    "eslint": "8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-erb": "^4.0.3",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -245,7 +245,6 @@
     "@types/sharp": "^0.31.1",
     "@types/worker-plugin": "^5.0.1",
     "comlink": "^4.3.1",
-    "canvas": "^2.11.0",
     "easy-web-worker": "^1.0.6",
     "electron-canvas-to-buffer": "^2.0.0",
     "electron-debug": "^3.2.0",
