--- a/package.json
+++ b/package.json
@@ -241,9 +241,11 @@
     "@mui/material": "^5.6.4",
     "@mui/styled-engine-sc": "^5.6.1",
     "@react-icons/all-files": "^4.1.0",
+    "@types/archiver": "^5.3.1",
     "@types/lodash": "^4.14.191",
     "@types/sharp": "^0.31.1",
     "@types/worker-plugin": "^5.0.1",
+    "archiver": "^5.3.1",
     "comlink": "^4.3.1",
     "easy-web-worker": "^1.0.6",
     "electron-canvas-to-buffer": "^2.0.0",
