--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-react-boilerplate",
+  "name": "protouv",
   "version": "4.5.0",
   "description": "A foundation for scalable desktop apps",
   "main": "./dist/main/main.js",
   "author": {
     "name": "Electron React Boilerplate Maintainers",
     "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "url": "https://github.com/protouv"
   },
   "scripts": {
     "electron-rebuild": "node -r ts-node/register ../../.erb/scripts/electron-rebuild.js",
