--- a/package.json
+++ b/package.json
@@ -247,6 +247,7 @@
     "@types/sharp": "^0.31.1",
     "@types/worker-plugin": "^5.0.1",
     "archiver": "^5.3.1",
+    "axios": "^1.3.2",
     "comlink": "^4.3.1",
     "easy-web-worker": "^1.0.6",
     "electron-canvas-to-buffer": "^2.0.0",
