--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "lib": [
       "dom",
       "es2021",
-      "WebWorker"
+      "webworker"
     ],
     "declaration": true,
     "declarationMap": true,
