--- a/package.json
+++ b/package.json
@@ -246,6 +246,7 @@
     "@types/lodash": "^4.14.191",
     "@types/sharp": "^0.31.1",
     "@types/worker-plugin": "^5.0.1",
+    "adm-zip": "^0.5.10",
     "archiver": "^5.3.1",
     "axios": "^1.3.2",
     "comlink": "^4.4.1",
