--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "protouv",
+  "version":"1.0.0",
   "description": "A foundation for scalable desktop apps",
   "main": "./dist/main/main.js",
   "author": {
