--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "protouv",
+  "version": "1.0.0",
   "description": "A foundation for scalable desktop apps",
   "scripts": {
     "build": "concurrently \"yarn run build:main\" \"yarn run build:renderer\"",
